--- a/small_business_app/composer.json
+++ b/small_business_app/composer.json
@@ -24,8 +24,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "SmallBusinessApp\\Documents\\SettingPrice\\": "packages/SmallBusinessApp/Modules/Documents/SettingPrice/src"
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
